--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Html Canvas</title>
 </head>
 <body>
+    <h2>paint</h2>
     <canvas id="draw" width="800" height="800"></canvas>
     <script src="main.js"></script>
 </body>
